--- a/js-01数据的表达.md
+++ b/js-01数据的表达.md
@@ -1,8 +1,10 @@
 ```
 \r\n 是因为在老式的打字机环境下 
 \r和\n的意义是不同的
-  - \r 换行 打字机的光标往下换一行，但是光标的x不变 y + 1
-  - \n 回车 打字机的光标 x = 0
+  - \n 换行 打字机的光标往下换一行，但是光标的x不变 y + 1
+  - \r 回车 打字机的光标 x = 0
+
+所以上一代的人使用打字机是先把光标推到起始点然后再换行\r\n
 
 
 
